--- a/app.html
+++ b/app.html
@@ -5,23 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>PlantBuddy</title>
   <style>
-
-
-
 /* --- Fonts (Canva match) --- */
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
+/* --- Fonts (stable, no local assets) --- */
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
-@font-face{
-  font-family:'Bubblebody Neue';
-  src:
-    url('Bubbleboddy Neue Trial Regular.woff2') format('woff2'),
-    url('Bubbleboddy Neue Trial Regular.woff') format('woff');
-  font-weight:400;
-  font-style:normal;
-  font-display:swap;
-}
-
-    :root{
+  :root{
   --bg:#fffef7;
   --card:#FFFFFF;
   --text:#545454;
@@ -39,7 +27,7 @@
 
     html,body{
   margin:0;
-  font-family:'Ubuntu', -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",Arial,"Noto Sans",sans-serif;
+  font-family:'Ubuntu', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
   background:var(--bg);
   color:var(--text);
 }
@@ -55,7 +43,7 @@
     /* Header */
     .hrow{display:flex;align-items:center;gap:10px;margin-top:8px;}
     .hicon{width:42px;height:42px;border-radius:14px;display:flex;align-items:center;justify-content:center;background:#fff;border:2px solid var(--border);box-shadow:none;}
-    h1{margin:0;font-size:42px;font-weight:400;letter-spacing:-0.01em;font-family:'Bubblebody Neue','Ubuntu',sans-serif;color:var(--brand);}
+    h1{margin:0;font-size:42px;font-weight:400;letter-spacing:-0.01em;font-family:'Fredoka','Ubuntu',sans-serif;color:var(--brand);}
     .sub{margin:6px 0 0;color:var(--text);opacity:.9;font-size:18px;}
 
     /* Stats */
@@ -168,7 +156,7 @@
   padding:18px 18px;
   font-weight:400;
   font-size:34px;
-  font-family:'Bubblebody Neue','Ubuntu',sans-serif;
+  font-family:'Fredoka','Ubuntu',sans-serif;
   color:var(--text);
   background:var(--accentSoft);
   box-shadow:none;
@@ -203,7 +191,7 @@
   border-radius:999px;
   font-weight:400;
   font-size:34px;
-  font-family:'Bubblebody Neue','Ubuntu',sans-serif;
+  font-family:'Fredoka','Ubuntu',sans-serif;
   box-shadow:none;
   cursor:pointer
 }
@@ -297,7 +285,8 @@
   /* Canva: hide advice banner in mini app */
   #adviceBanner{display:none!important;}
 
-  </style>
+  
+</style>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 
