--- a/app.html
+++ b/app.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="ru">
 <head>
+<!-- Cache-bust helpers for iOS/Telegram WebView -->
+<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0"/>
+<meta http-equiv="Pragma" content="no-cache"/>
+<meta http-equiv="Expires" content="0"/>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>PlantBuddy</title>
@@ -321,16 +326,32 @@
 #plantsList .small, #plantsList .tag, #plantsList .chev {display:none!important;}
 
 
-/* --- Step 2.1: Canva spacing polish --- */
-.wrap{max-width:620px;margin:0 auto;padding:18px 18px 120px;}
-.tabs{gap:18px;margin:22px 0 22px;}
+/* --- Step 3: Canva alignment + hide plants controls --- */
+.wrap{max-width:640px;margin:0 auto;padding:18px 18px 120px;}
+.tabs{gap:18px;margin:22px 0 22px;justify-content:center;}
 .tab{min-width:260px;text-align:center;}
 
-/* Lists centered like Canva */
-#plantsList, #list{display:flex;flex-direction:column;gap:16px;align-items:center;}
-#plantsList .plantcard, #list .card{width:100%;max-width:520px;}
-#plantsList .plantcard{margin:0;}
-#plantsList .title.onlyline{font-size:24px;font-weight:600;}
+/* Center lists like Canva */
+#list, #plantsList{display:flex;flex-direction:column;gap:16px;align-items:center;}
+#list .card, #plantsList .plantcard{width:100%;max-width:520px;margin:0;}
+
+/* Plants controls hidden (keep logic, hide UI) */
+#plantsActive, #plantsArchived, #btnAddPlant{display:none!important;}
+#screenPlants > .row:first-of-type{display:none!important;}
+
+/* Plants row text sizing */
+#plantsList .title.onlyline{font-size:22px;font-weight:600;}
+
+/* Remove any extra "advice" banner */
+#adviceBanner{display:none!important;}
+
+
+/* --- Fix: hide bottom filters/links above CTA (Canva) --- */
+#barlinks{display:none!important;}
+.barlinks{display:none!important;}
+
+/* --- Fix: Today empty state must always show --- */
+#list .empty{display:flex!important;align-items:center;justify-content:center;min-height:50vh;width:100%;max-width:520px;}
 </style>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
@@ -557,80 +578,8 @@ const state = {
   }
 
   function renderSubtitle(){
-    // Canva: fixed tagline (no stats line)
     els.subtitle.textContent = "Знаю, когда поливать твои растения";
   }
-
-  function apiFetch(path, opts){
-    opts = opts || {};
-    opts.headers = Object.assign({}, opts.headers || {}, {
-      "Content-Type": "application/json",
-      "X-Telegram-InitData": initData
-    });
-    return fetch(path, opts).then(async (res)=>{
-      const text = await res.text();
-      let data = null;
-      try { data = text ? JSON.parse(text) : null; } catch(e){}
-      if (!res.ok){
-        const msg = (data && (data.detail || data.message)) || `HTTP ${res.status}`;
-        throw new Error(msg);
-      }
-      return data;
-    });
-  }
-
-  // -------- TODAY --------
-  function statusCounts(items){
-    const c = {overdue:0, due:0, ok:0, unknown:0, all: items.length};
-    for (const it of items){
-      const s = it.status || "unknown";
-      if (c[s] !== undefined) c[s] += 1;
-      else c.unknown += 1;
-    }
-    return c;
-  }
-
-  function renderStats(){
-  if (!state.items.length){
-    els.stats.style.display="none";
-    els.stats.innerHTML="";
-    return;
-  }
-  const c = statusCounts(state.items);
-  const actions = c.overdue + c.due + c.unknown;
-  if (actions === 0) {
-    els.stats.style.display="none";
-    els.stats.innerHTML="";
-    return;
-  }
-
-  // Today is an "action" screen: list only what needs attention.
-  // We still show the count of "Ок" items, but we don't make it a filter.
-  const chips = [
-    {k:"all", label:"Все", cls:""},
-    {k:"overdue", label:`Просрочено: ${c.overdue}`, cls:"danger"},
-    {k:"due", label:`Пора: ${c.due}`, cls:"warn"},
-    {k:"unknown", label:`Настроить: ${c.unknown}`, cls:"neutral"},
-  ];
-
-  const okChip = `<span class="pill ok passive">Ок: ${c.ok}</span>`;
-
-  els.stats.innerHTML =
-    chips.map(ch=>{
-      const active = (state.filter===ch.k) ? "active" : "";
-      return `<button class="pill ${ch.cls} ${active}" data-filter="${ch.k}">${ch.label}</button>`;
-    }).join("") + okChip;
-
-  els.stats.style.display="flex";
-
-  // bind
-  els.stats.querySelectorAll("[data-filter]").forEach(btn=>{
-    btn.addEventListener("click", ()=>{
-      state.filter = btn.getAttribute("data-filter") || "all";
-      renderToday();
-    });
-  });
-}
 
   function renderToday(){
     clearError(els.error);
@@ -1083,6 +1032,10 @@ const state = {
   }
 
   loadToday();
+  // brand header lock (Canva)
+  els.htitle.textContent = "PlantBuddy";
+  els.hicon.textContent = "🌱";
+  renderSubtitle();
 })();
 </script>
 </body>
