--- a/app.html
+++ b/app.html
@@ -1,41 +1,26 @@
 <!doctype html>
 <html lang="ru">
 <head>
-<!-- Cache-bust helpers for iOS/Telegram WebView -->
-<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0"/>
-<meta http-equiv="Pragma" content="no-cache"/>
-<meta http-equiv="Expires" content="0"/>
-
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>PlantBuddy</title>
   <style>
-/* --- Fonts (Canva match) --- */
-/* --- Fonts (stable, no local assets) --- */
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
-  :root{
-  --bg:#fffef7;
-  --card:#FFFFFF;
-  --text:#545454;
-  --muted:#a6a6a6;
-  --border:rgba(84,84,84,.35);
-  --accent:#0097b2;
-  --accentSoft:#b3dfea;
-  --brand:#7ed957;
-  --disabled:#d9d9d9;
-  --danger:#D64545;
-  --warn:#C57F1E;
-  --shadow:0 10px 30px rgba(84,84,84,.10);
-  --radius:18px;
-}
+    :root{
+      --bg:#F6FBFD;
+      --card:#FFFFFF;
+      --text:#2A2D34;
+      --muted:#4B5563;
+      --border:#D7E2E8;
+      --accent:#30C5FF;
+      --accent2:#5C946E;
+      --danger:#D64545;
+      --warn:#C57F1E;
+      --shadow:0 10px 30px rgba(42,45,52,.10);
+      --radius:18px;
+    }
 
-    html,body{
-  margin:0;
-  font-family:'Ubuntu', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
-  background:var(--bg);
-  color:var(--text);
-}
+    html,body{height:100%;}
     body{
       margin:0;
       font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",Arial,"Noto Sans",sans-serif;
@@ -47,9 +32,9 @@
 
     /* Header */
     .hrow{display:flex;align-items:center;gap:10px;margin-top:8px;}
-    .hicon{width:42px;height:42px;border-radius:14px;display:flex;align-items:center;justify-content:center;background:#fff;border:2px solid var(--border);box-shadow:none;}
-    h1{margin:0;font-size:42px;font-weight:400;letter-spacing:-0.01em;font-family:'Fredoka','Ubuntu',sans-serif;color:var(--brand);}
-    .sub{margin:6px 0 0;color:var(--text);opacity:.9;font-size:18px;}
+    .hicon{width:42px;height:42px;border-radius:14px;display:flex;align-items:center;justify-content:center;background:#fff;border:1px solid var(--border);box-shadow:0 4px 14px rgba(42,45,52,.06);}
+    h1{margin:0;font-size:30px;font-weight:900;letter-spacing:-0.02em;}
+    .sub{margin:8px 0 0;color:var(--muted);}
 
     /* Stats */
     .stats{margin-top:14px;display:flex;gap:8px;flex-wrap:wrap;}
@@ -68,15 +53,15 @@
     .list{margin-top:16px;display:flex;flex-direction:column;gap:12px;}
 
     .card{
-  display:flex;gap:12px;align-items:center;
-  padding:18px 18px;
-  border:2px solid var(--border);
-  border-radius:999px;
-  background:#FFFFFF;
-  box-shadow:none;
-  cursor:pointer;
-  user-select:none;
-}
+      display:flex;gap:12px;align-items:flex-start;
+      padding:14px;
+      border:1px solid var(--border);
+      border-radius:var(--radius);
+      background:var(--card);
+      box-shadow:0 8px 24px rgba(42,45,52,.08);
+      cursor:pointer;
+      user-select:none;
+    }
     .card:active{transform:translateY(1px);}
 
     .check{width:22px;height:22px;margin-top:4px;accent-color:var(--accent2);}
@@ -154,21 +139,25 @@
     .linkbtn:disabled{opacity:.55;cursor:default;}
 
     .btn{
-  width:100%;
-  display:block;
-  border:2px solid var(--border);
-  border-radius:999px;
-  padding:18px 18px;
-  font-weight:400;
-  font-size:34px;
-  font-family:'Fredoka','Ubuntu',sans-serif;
-  color:var(--text);
-  background:var(--accentSoft);
-  box-shadow:none;
-  cursor:pointer;
-}
+      width:100%;
+      display:block;
+      border:none;
+      border-radius:16px;
+      padding:16px 18px;
+      font-weight:900;
+      font-size:16px;
+      color:#0A1B22;
+      background:var(--accent);
+      box-shadow:0 10px 25px rgba(48,197,255,.25);
+      cursor:pointer;
+    }
 
-    .btn.inactive{background:var(--disabled);color:var(--muted);box-shadow:none;cursor:default;}
+    .btn.inactive{
+      background:#E5E7EB;
+      color:#6B7280;
+      box-shadow:none;
+      cursor:default;
+    }
     .btn:disabled{opacity:.55;box-shadow:none;cursor:default;}
 
     .skeleton{
@@ -187,25 +176,10 @@
   
 
     /* --- Tabs / Screens --- */
-    .tabs{display:flex;gap:18px;margin:22px 0 18px;flex-wrap:wrap;justify-content:center}
-.tab{
-  border:2px solid var(--border);
-  background:var(--accentSoft);
-  color:#ffffff;
-  padding:14px 20px;
-  border-radius:999px;
-  font-weight:400;
-  font-size:34px;
-  font-family:'Fredoka','Ubuntu',sans-serif;
-  box-shadow:none;
-  cursor:pointer
-}
-.tab.active{
-  background:var(--accentSoft);
-  color:var(--accent);
-  border-color:var(--border);
-  box-shadow:none
-}
+    .tabs{display:flex;gap:10px;margin:12px 0 10px;flex-wrap:wrap}
+    .tab{border:1px solid var(--border);background:var(--card);color:var(--muted);padding:10px 12px;border-radius:999px;
+      font-weight:700; box-shadow:0 4px 14px rgba(42,45,52,.06); cursor:pointer}
+    .tab.active{color:var(--text);border-color:rgba(48,197,255,.55); box-shadow:0 10px 22px rgba(48,197,255,.14)}
     .screen{display:none}
     .screen.active{display:block}
 
@@ -285,88 +259,21 @@
     #tabNorms{display:none!important;}
     #screenNorms{display:none!important;}
 
-  
-
-  /* Canva: hide advice banner in mini app */
-  #adviceBanner{display:none!important;}
-
-  
-
-
-  .empty{display:flex;align-items:center;justify-content:center;min-height:50vh;font-size:30px;color:#000;text-align:center;font-family:'Ubuntu',sans-serif;}
-
-  .stats,.filters,.subline{display:none!important;}
-
-
-/* --- Step 2: Plants screen (Canva match) --- */
-
-/* Hide plants technical UI blocks (keep logic, hide visuals) */
-#plantsActions, #plantsTop, .plantsActions, .plantsToolbar, .plantsBar, .plantsHeader,
-#btnAddPlant, #btnPlantsMode, #plantsModePills, .modepills, .pillrow {display:none!important;}
-
-/* Plants list rows */
-#plantsList .plantcard{
-  background:#fff;
-  border:2px solid rgba(84,84,84,.35);
-  border-radius:999px;
-  padding:18px 20px;
-  box-shadow:none;
-}
-#plantsList .title.onlyline{
-  font-family:'Ubuntu',sans-serif;
-  font-weight:500;
-  font-size:22px;
-  color:var(--text);
-  white-space:nowrap;
-  overflow:hidden;
-  text-overflow:ellipsis;
-}
-
-/* In case old sub-elements still exist */
-#plantsList .small, #plantsList .tag, #plantsList .chev {display:none!important;}
-
-
-/* --- Step 3: Canva alignment + hide plants controls --- */
-.wrap{max-width:640px;margin:0 auto;padding:18px 18px 120px;}
-.tabs{gap:18px;margin:22px 0 22px;justify-content:center;}
-.tab{min-width:260px;text-align:center;}
-
-/* Center lists like Canva */
-#list, #plantsList{display:flex;flex-direction:column;gap:16px;align-items:center;}
-#list .card, #plantsList .plantcard{width:100%;max-width:520px;margin:0;}
-
-/* Plants controls hidden (keep logic, hide UI) */
-#plantsActive, #plantsArchived, #btnAddPlant{display:none!important;}
-#screenPlants > .row:first-of-type{display:none!important;}
-
-/* Plants row text sizing */
-#plantsList .title.onlyline{font-size:22px;font-weight:600;}
-
-/* Remove any extra "advice" banner */
-#adviceBanner{display:none!important;}
-
-
-/* --- Fix: hide bottom filters/links above CTA (Canva) --- */
-#barlinks{display:none!important;}
-.barlinks{display:none!important;}
-
-/* --- Fix: Today empty state must always show --- */
-#list .empty{display:flex!important;align-items:center;justify-content:center;min-height:50vh;width:100%;max-width:520px;}
-</style>
+  </style>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 
 <body>
   <div class="wrap">
     <div class="hrow">
-      <div class="hicon" id="hicon">🌱</div>
-      <h1 id="htitle">PlantBuddy</h1>
+      <div class="hicon" id="hicon">📅</div>
+      <h1 id="htitle">Сегодня</h1>
     </div>
-    <p class="sub" id="subtitle">Знаю, когда поливать твои растения</p>
+    <p class="sub" id="subtitle">Загружаю…</p>
 
     <div class="tabs" role="tablist">
-      <button class="tab active" id="tabToday">Сегодня</button>
-      <button class="tab" id="tabPlants">Мои растения</button>
+      <button class="tab active" id="tabToday">📅Сегодня</button>
+      <button class="tab" id="tabPlants">🪴Растения</button>
       <button class="tab" id="tabNorms">💦Нормы</button>
     </div>
 
@@ -429,7 +336,7 @@
         <button class="linkbtn" id="btnSelectNeed" disabled>Выбрать: пора + просрочено</button>
         <button class="linkbtn" id="btnClear" disabled>Сбросить</button>
       </div>
-      <button class="btn" id="btnWater" disabled>💦Отметить полив</button>
+      <button class="btn" id="btnWater" disabled>✅Отметить полив</button>
     </div>
   </div>
 
@@ -578,8 +485,100 @@ const state = {
   }
 
   function renderSubtitle(){
-    els.subtitle.textContent = "Знаю, когда поливать твои растения";
+  if (state.screen==="today"){
+    const total = state.items.length;
+    const sel = state.selected.size;
+    const c = statusCounts(state.items);
+    const action = c.overdue + c.due + c.unknown;
+
+    const f = state.filter==="all" ? "Все" :
+              state.filter==="overdue" ? "Просрочено" :
+              state.filter==="due" ? "Пора" : "Настроить";
+
+    els.subtitle.textContent = `Всего: ${total} · Действий: ${action} · Выбрано: ${sel} · Фильтр: ${f}`;
+    return;
   }
+  if (state.screen==="plants"){
+    els.subtitle.textContent = state.plantsMode==="active" ? "Активные растения" : "Архивные растения";
+    return;
+  }
+  if (state.screen==="norms"){
+    els.subtitle.textContent = "Просмотр и настройка норм полива";
+    return;
+  }
+  els.subtitle.textContent = "";
+}
+
+  function apiFetch(path, opts){
+    opts = opts || {};
+    opts.headers = Object.assign({}, opts.headers || {}, {
+      "Content-Type": "application/json",
+      "X-Telegram-InitData": initData
+    });
+    return fetch(path, opts).then(async (res)=>{
+      const text = await res.text();
+      let data = null;
+      try { data = text ? JSON.parse(text) : null; } catch(e){}
+      if (!res.ok){
+        const msg = (data && (data.detail || data.message)) || `HTTP ${res.status}`;
+        throw new Error(msg);
+      }
+      return data;
+    });
+  }
+
+  // -------- TODAY --------
+  function statusCounts(items){
+    const c = {overdue:0, due:0, ok:0, unknown:0, all: items.length};
+    for (const it of items){
+      const s = it.status || "unknown";
+      if (c[s] !== undefined) c[s] += 1;
+      else c.unknown += 1;
+    }
+    return c;
+  }
+
+  function renderStats(){
+  if (!state.items.length){
+    els.stats.style.display="none";
+    els.stats.innerHTML="";
+    return;
+  }
+  const c = statusCounts(state.items);
+  const actions = c.overdue + c.due + c.unknown;
+  if (actions === 0) {
+    els.stats.style.display="none";
+    els.stats.innerHTML="";
+    return;
+  }
+
+  // Today is an "action" screen: list only what needs attention.
+  // We still show the count of "Ок" items, but we don't make it a filter.
+  const chips = [
+    {k:"all", label:"Все", cls:""},
+    {k:"overdue", label:`Просрочено: ${c.overdue}`, cls:"danger"},
+    {k:"due", label:`Пора: ${c.due}`, cls:"warn"},
+    {k:"unknown", label:`Настроить: ${c.unknown}`, cls:"neutral"},
+  ];
+
+  const okChip = `<span class="pill ok passive">Ок: ${c.ok}</span>`;
+
+  els.stats.innerHTML =
+    chips.map(ch=>{
+      const active = (state.filter===ch.k) ? "active" : "";
+      return `<button class="pill ${ch.cls} ${active}" data-filter="${ch.k}">${ch.label}</button>`;
+    }).join("") + okChip;
+
+  els.stats.style.display="flex";
+
+  // bind
+  els.stats.querySelectorAll("[data-filter]").forEach(btn=>{
+    btn.addEventListener("click", ()=>{
+      state.filter = btn.getAttribute("data-filter") || "all";
+      renderToday();
+    });
+  });
+}
 
   function renderToday(){
     clearError(els.error);
@@ -593,7 +592,7 @@ const state = {
 
         if (!items.length){
       if (state.filter==="all"){
-        els.list.innerHTML = `<div class="empty">💧Сегодня все ок</div>`;
+        els.list.innerHTML = `<div class="empty">Сегодня всё ок 🌿</div>`;
       } else {
         els.list.innerHTML = `<div class="empty">По фильтру ничего нет.</div>`;
       }
@@ -739,44 +738,18 @@ const state = {
     }
 
     els.plantsList.innerHTML = state.plants.map(p=>{
-      const now = new Date();
-      const name = escapeHtml(p.name || "");
-      let suffix = "";
-
-      const every = (p.water_every_days==null) ? null : Number(p.water_every_days);
-      const last = p.last_watered_at ? new Date(p.last_watered_at) : null;
-
-      const plural = (n)=> {
-        const a = Math.abs(n)%100;
-        const b = a%10;
-        if (a>10 && a<20) return "дней";
-        if (b==1) return "день";
-        if (b>=2 && b<=4) return "дня";
-        return "дней";
-      };
-
-      if (every && last && !isNaN(last.getTime())){
-        const msPerDay = 24*60*60*1000;
-        const daysSince = Math.floor((now - last) / msPerDay);
-        const dueIn = every - daysSince;
-
-        if (dueIn > 0){
-          suffix = ` (${dueIn} ${plural(dueIn)} до полива)`;
-        } else if (dueIn === 0){
-          suffix = ` (полить сегодня)`;
-        } else {
-          const od = Math.abs(dueIn);
-          suffix = ` (просрочено на ${od} ${plural(od)})`;
-        }
-      } else if (every && !last){
-        suffix = ` (полить сегодня)`;
-      } else if (!every){
-        suffix = ` (норма не задана)`;
-      }
-
+      const norm = p.water_every_days==null ? "норма: —" : `норма: ${p.water_every_days}д`;
+      const lw = p.last_watered_at ? `посл.полив: ${formatDate(p.last_watered_at)}` : "посл.полив: —";
       return `
         <div class="card plantcard" data-id="${p.id}">
-          <div class="title onlyline">${name}${suffix}</div>
+          <div class="meta" style="flex:1;min-width:0">
+            <div class="top" style="display:flex;align-items:center;justify-content:space-between;gap:10px">
+              <div class="title">${escapeHtml(p.name || "")}</div>
+              <span class="tag unknown" style="background:#F8FAFC">${norm}</span>
+            </div>
+            <div class="small">${lw}</div>
+          </div>
+          <div class="chev">›</div>
         </div>
       `;
     }).join("");
@@ -1032,10 +1005,6 @@ const state = {
   }
 
   loadToday();
-  // brand header lock (Canva)
-  els.htitle.textContent = "PlantBuddy";
-  els.hicon.textContent = "🌱";
-  renderSubtitle();
 })();
 </script>
 </body>
